Avatar and blocks can no longer move out of bounds
Added out-of-bounds class to style outside the walls and implement the new functionality

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,19 +169,24 @@
     position: relative;
 }
 
+
+
 .all-blocks{
     width: 32px;
     height: 32px;
     position: absolute;
+    /* background: black; */
     /* border: 1px dotted #ddd; */
     background: url("../img/ground.png");
     background-size: cover;
 }
 
 .walls,
+.out-of-bounds,
 .goals{
     width: 32px;
     height: 32px;
+    
 }
 
 .goals{
@@ -200,6 +205,10 @@
     background-size: cover;
 }
 
+.out-of-bounds{
+    background: black;
+}
+
 .avatar,
 .boxes{
     width: 32px;
@@ -208,6 +217,8 @@
     z-index: +1;
     margin: 0 auto;
 }
+
+
 
 /* FINAL COMPONENT */
 .final{
